--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>Hello World</h1>
-  </body>
-</html>
+
+ <%- include("header") -%>
+  <h1>Hello World</h1>
+  <% products.forEach(product => {%> 
+    <article class="card-product">
+      <h3><%=product.name%></h3>
+      <% }) %>
+
+  <%- include("footer") -%>
+
