implementando for con base de datos en el front

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
                      <a href="">Crear Producto </a>
                 </li>
                 <li> 
-                    <a href="">Ver Productos </a> 
+                    <a href="">home</a> 
                 </li>
                 <li> 
                     <a href="">Editar/Eliminar Producto 
