--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 
- <%- include("header") -%>
+ <%- include("partials/header") -%>
+ 
   <h1>Hello World</h1>
     
   
@@ -20,5 +21,5 @@
          
     
 
-  <%- include("footer") -%>
+  <%- include("partials/footer") -%>
 
