--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
         <nav> 
             <ul> 
                 <li>
-                     <a href="">Crear Producto </a>
+                     <a href="/create">Crear Producto </a>
                 </li>
                 <li> 
                     <a href="">home</a> 
