--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,10 +13,10 @@
                      <a href="/create">Crear Producto </a>
                 </li>
                 <li> 
-                    <a href="">home</a> 
+                    <a href="/">home</a> 
                 </li>
                 <li> 
-                    <a href="">Editar/Eliminar Producto 
+                    <a href="/edit">Editar/Eliminar Producto 
 
                     </a>
                 </li>
