--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,20 +1,101 @@
 <%- include("partials/header") -%>
 
+<main class="main-form">
 
+    <form action="/edit/<%= products.id %>" method="POST" class="form-product" >
+        <div class="personal-information">
+            <div class="title-information"><h3>Editar Producto</h3></div>
+             
+      
+ 
+       <div class="first">
 
+           <div class="main-link">
+            <input type="text" name="name" placeholder="Nombre del producto" class="input name" value="<%= products.name %>">
+            <% if (locals.errors && errors.name) {%> 
+                <div class="text-danger">
+                  <%= errors.name.msg %> 
+                </div>
+                <% } %>        
+        </div>
+        <div class="brand-main">
 
+            <div class="brand-select">
+             <select name="brand" > 
+                <% for ( let i = 0 ; i < brand.length ; i++ ) { %>
+                <% if (brand[i].id == products.brand_id) { %> 
 
+                <option value="<%= brand[i].id%>"  selected >
+                                                          
+                        <%= brand[i].name %> 
+                </option>
+                <% }else  { %>                       
+                <option value="<%= brand[i].id %>" > 
+                      <%= brand[i].name %>  
+                </option>  
+                <% } %>    
+                <% } %> 
+             </select>
 
+             <div class="color-select">
+                <select name="color" > 
+                    <% for ( let i = 0 ; i < color.length ; i++ ) { %>
+                    <% if (color[i].id == products.color_id) { %> 
+                
+                    <option value="<%= color[i].id%>"  selected >
+                                                              
+                            <%= color[i].name %> 
+                    </option>
+                    <% }else  { %>                       
+                    <option value="<%= color[i].id %>" > 
+                          <%= color[i].name %>  
+                    </option>  
+                    <% } %>    
+                    <% } %> 
+                 </select>
+                
+            <div class="material-select">
+                <select name="material" > 
+                    <% for ( let i = 0 ; i < material.length ; i++ ) { %>
+                    <% if (material[i].id == products.material_id) { %> 
+                
+                    <option value="<%= material[i].id%>"  selected >
+                                                              
+                            <%= material[i].name %> 
+                    </option>
+                    <% }else  { %>                       
+                    <option value="<%= material[i].id %>" > 
+                          <%= material[i].name %>  
+                    </option>  
+                    <% } %>    
+                    <% } %> 
+                 </select>
+                 
+            <div class="precio">
 
+                <div class="precio-link">
+                <input type="text" name="price" placeholder="valor" value="<%= products.price %>">
+                <% if (locals.errors && errors.name) {%> 
+                    <div class="text-danger">
+                      <%= errors.price.msg %> 
+                    </div>
+                    <% } %>     
+            </div>        
+            <div class="descripcion">
 
-
-
-
-
-
-
-
-
+                <div class="descripcion-link" name="descripcion">
+                <input type="text" name="descripcion" placeholder="descripcion" value="<%= products.description %>">
+                <% if (locals.errors && errors.name) {%> 
+                    <div class="text-danger">
+                      <%= errors.descripcion.msg %> 
+                    </div>
+                    <% } %>     
+            </div>                  
+          
+         </div>
+         <button type="submit" > editar producto </button>
+         <button  > eliminar producto </button>
+    </div>
 
 
 
