--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,26 +3,38 @@
   <head>
     <title> Challenge Digital 2022 </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
   <body>
-    <header>  
+    <header> 
+        <div class="container"> 
+          <div class="col-md-6>
         <p> Challenge Digital 2022 </p>
+          </div>  
+        </div>        
         <nav> 
-            <ul> 
+            <ul>
+                <div>  
                 <li>
                      <a href="/create">Crear Producto </a>
                 </li>
+                </div>
+                <div>
                 <li> 
                     <a href="/">home</a> 
                 </li>
+                </div>
+                <div>
                 <li> 
-                    <a href="/edit">Editar/Eliminar Producto 
+                    <a href="/edit/1">Editar/Eliminar Producto 
 
                     </a>
                 </li>
+                </div>
                 
 
             </ul>
-        </nav>
+
+          
     </header>
 
