cambios en controllers, agregando boostrap , edicion en el create , validaciones, footer y header

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -70,7 +70,7 @@
                     <% } %>    
                     <% } %> 
                  </select>
-                 
+
             <div class="precio">
 
                 <div class="precio-link">
@@ -93,11 +93,9 @@
             </div>                  
           
          </div>
-         <button type="submit" > editar producto </button>
-         <button  > eliminar producto </button>
-    </div>
-
-
+         <button type="submit" class="btn btn-warning" > editar producto </button>
+         <button type="submit" class="btn btn-danger" > eliminar producto </button>
+        
 
 
 
