--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,26 @@
-     <footer>
-     Challenge Digital House
-    </footer>
-</body>
-</html>
+<footer>
+
+    <div class = "footer-section-container">
+        
+        <section class = "footer-section">
+
+            <h5>Seguinos en:</h5>
+
+            <div class="iconos-contacto">
+                
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+
+            </div>
+
+                
+        
+    </div>
+    
+        <h5 class = "copyright" > Copyright ©  Desafio digital 2022 </h5> 
+    </section>
+    
+
+
+</footer>
