--- a/views/create.ejs
+++ b/views/create.ejs
@@ -73,7 +73,7 @@
             </div>                  
           
          </div>
-         <button type="submit" > Crear Producto </button>
+         <button type="submit" class="btn btn-primary" > Crear Producto </button>
     </div>
 
 
