--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <title> Challenge Digital 2022 </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- <link rel='stylesheet' href='/stylesheets/style.css' /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
   <body>
-    <header> 
-        <div class="container"> 
-          <div class="col-md-6>
-        <p> Challenge Digital 2022 </p>
-          </div>  
-        </div>        
-        <nav> 
-            <ul>
-                <div>  
-                <li>
-                     <a href="/create">Crear Producto </a>
-                </li>
-                </div>
-                <div>
-                <li> 
-                    <a href="/">home</a> 
-                </li>
-                </div>
-                <div>
-                <li> 
-                    <a href="/edit/1">Editar/Eliminar Producto 
-
-                    </a>
-                </li>
-                </div>
+    <header>
+      
+      <nav class="navbar navbar-expand-lg bg-light ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Desafio Digital</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/create">crear producto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/edit/1">edita o elimina tu producto</a>
+              </li>
+              
+          </div>
+        </div>
+      </nav>
                 
-
-            </ul>
-
-          
+  
     </header>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>    
