--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,20 +1,21 @@
 <%- include("partials/header") -%>
 
-<h4> Creacion de productos </h4>
 
+<div class="container">
 
-<main class="main-form">
+<main class="col-6">
 
-    <form action="/create" method="POST" class="form-product" >
+    <form action="/create" method="POST" class="row" >
         <div class="personal-information">
             <div class="title-information"><h3>Crear producto</h3></div>
              
       
  
-       <div class="first">
+       <div class="col-6">
 
-           <div class="main-link">
-            <input type="text" name="name" placeholder="Nombre del producto" class="input name">
+           <div class="form-label mt-2" >
+            <input type="text" name="name" placeholder="Nombre del producto" >
+            
             <% if (locals.errors && errors.name) {%> 
                 <div class="text-danger">
                   <%= errors.name.msg %> 
@@ -23,8 +24,8 @@
         </div>
         <div class="brand-main">
 
-            <div class="brand-select">
-             <select name="brand" > 
+            <div class="form-label">
+             <select name="brand" class="form-select" > 
                 <% for ( let i = 0 ; i < brand.length ; i++ ) { %>
                 <option value="<%= brand[i].id%>"> 
                         <%= brand[i].name %> 
@@ -34,8 +35,8 @@
                 <% } %> 
              </select>
 
-             <div class="color-select">
-                <select name="color" > 
+             <div class="form-label">
+                <select name="color" class="form-select" > 
                    <% for ( let i = 0 ; i < color.length ; i++ ) { %>
                    <option value="<%= color[i].id%>"> 
                            <%= color[i].name %> 
@@ -43,8 +44,8 @@
                    <% } %> 
                 </select>
                 
-            <div class="material-select">
-                <select name="material" > 
+            <div class="form-label">
+                <select name="material" class="form-select"  > 
                     <% for ( let i = 0 ; i < material.length ; i++ ) { %>
                     <option value="<%= material[i].id%>"> 
                                <%= material[i].name %> 
@@ -53,8 +54,8 @@
                     </select>
             <div class="precio">
 
-                <div class="precio-link">
-                <input type="text" name="price" placeholder="valor">
+                <div  class="form-label">
+                <input type="text" name="price" placeholder="valor" class="form-label">
                 <% if (locals.errors && errors.name) {%> 
                     <div class="text-danger">
                       <%= errors.price.msg %> 
@@ -63,35 +64,29 @@
             </div>        
             <div class="descripcion">
 
-                <div class="descripcion-link" name="descripcion">
-                <input type="text" name="descripcion" placeholder="descripcion">
+                <div class="descripcion-link" name="descripcion" class="form-label">
+                <input type="text" name="descripcion" placeholder="descripcion" class="form-label">
                 <% if (locals.errors && errors.name) {%> 
                     <div class="text-danger">
                       <%= errors.descripcion.msg %> 
                     </div>
                     <% } %>     
-            </div>                  
+            </div>   
+            <div class="precio">
+
+                <div  class="form-label">
+                <input type="text" name="url" placeholder="url de tu imagen" class="form-label">
+                <% if (locals.errors && errors.name) {%> 
+                    <div class="text-danger">
+                      <%= errors.url.msg %> 
+                    </div>
+                    <% } %>     
+            </div>                       
           
          </div>
          <button type="submit" class="btn btn-primary" > Crear Producto </button>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 <%- include("partials/footer") -%>
+
+
