--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,35 @@
 
  <%- include("partials/header") -%>
- 
- <div class="container text-center">
-  <div class="row">
-    <div class="col">
-      1 of 2
-      
-      <% products.forEach(product => {%> 
-      <img src="<%= product && product.image && product.image.url %>" class="img-fluid" alt="...">
-        <article class="card-product-description">
-          <h3><%=product.name%></h3>
-          <h3><%=product.description%></h3>
-          <h3><%=product.brands.name%></h3>
-          <h3> <u1s>U$S</u1s> <%=product.price%></h3>
-           
-          <% }) %>
-     
-     
-           
+
+
+ <div class="album py-5 bg-light">
+  <div class=" container"> 
+        <div style="width: 100%; display: flex; flex-wrap: wrap">
+            <% products.forEach(product => {%> 
+              <div style="width: 25rem; margin: 1rem; background: #eee; border-radius: 0.5rem; padding: 0.5rem">
+                <img src="<%= product && product.image && product.image.url %>" class="card-img-top"  alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><%=product.name%></h5>
+                  <p class="card-text"><%=product.description%> </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"> <u1s>U$S</u1s><%=product.price%></li>
+                  
+                </ul>
+                <div class="card-body">
+                  <a href="/edit/<%=product.id%>" class="card-link">Editame</a>
+                </div>
+              </div>
+            <% }) %>
+          </div>
+    </div>  
+  </div>
+
+        
     
+           
+  <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>  
 
   <%- include("partials/footer") -%>
+
 
